Fix issue: parse front matter error
- error: end of the stream or a document separator is expected
- changes: using hexo-front-matter

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "dependencies": {
     "hexo-fs": "^0.2.2",
-    "yaml-front-matter": "^3.4.0"
+    "hexo-front-matter": "^1.0.0"
   },
   "devDependencies": {}
 }
